--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,15 @@
   display: none;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 model-viewer {
