--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,11 @@
   display: none;
 }
 
-html {
-  height: 100%;
-}
-
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 model-viewer {
